# rust-simple-tui

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/fancyterm/: mod.rs  ui.rs
src/simpletui/: ui.rs
